improv: functional amber hourglass processing