@@ -1,13 +1,14 @@
 package com.aetherteam.aetherii.inventory.menu;
 
+import com.aetherteam.aetherii.AetherII;
 import com.aetherteam.aetherii.AetherIITags;
 import com.aetherteam.aetherii.inventory.AetherIIRecipeBookTypes;
-import com.aetherteam.aetherii.inventory.menu.slot.AltarFuelSlot;
 import com.aetherteam.aetherii.inventory.menu.slot.AltarResultSlot;
 import com.aetherteam.aetherii.recipe.recipes.item.AltarEnchantingRecipe;
 import com.aetherteam.aetherii.recipe.set.AetherIIRecipePropertySets;
 import net.minecraft.core.Direction;
 import net.minecraft.recipebook.ServerPlaceRecipe;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.util.Mth;
 import net.minecraft.world.Container;
@@ -49,7 +50,19 @@ public class AltarMenu extends RecipeBookMenu {
         int y = 26;
         Direction direction = Direction.WEST;
         for (int i = 1; i <= 8; i++) {
-            this.addSlot(new AltarFuelSlot(this, container, i, x, y)); // Fuel
+            this.addSlot(new Slot(container, i, x, y) {
+                public static final ResourceLocation SLOT_FUEL = ResourceLocation.fromNamespaceAndPath(AetherII.MODID, "container/altar/slot_fuel");
+
+                @Override
+                public boolean mayPlace(ItemStack stack) {
+                    return AltarMenu.this.isFuel(stack);
+                }
+
+                @Override
+                public ResourceLocation getNoItemIcon() {
+                    return SLOT_FUEL;
+                }
+            }); // Fuel
             if (i % 2 == 0) {
                 direction = direction.getCounterClockWise();
             }
@@ -132,7 +145,7 @@ public class AltarMenu extends RecipeBookMenu {
     }
 
     public ItemStack getInputStack() {
-        return this.getItems().get(0);
+        return this.getItems().getFirst();
     }
 
     public float getProcessingProgress() {
